[project]
name = "stock-market-price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.18.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.0.0",
]
